<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="viewStart"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etDirectInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/direct_input"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:text=""
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="@+id/etManualInput"
        app:layout_constraintTop_toBottomOf="@+id/etManualInput" />

    <Button
        android:id="@+id/btnKeyboard"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:text="@string/send"
        app:layout_constraintStart_toEndOf="@+id/etManualInput"
        app:layout_constraintTop_toTopOf="@+id/etManualInput"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etManualInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="emailAddress,name"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/manual_input"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>